<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   	<group>
    	<item
        	android:id="@+id/nav_item_add_times"
        	android:title="@string/button_add_times"
        	android:icon="@drawable/ic_action_new"/>
	</group>

	<item android:title="@string/drawer_database">
        <menu
            android:id="@+id/menu_group_backup"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_item_backup"
                android:icon="@drawable/ic_action_download"
                android:title="@string/button_backup"/>
            <item
                android:id="@+id/nav_item_restore"
                android:icon="@drawable/ic_action_upload"
                android:title="@string/button_restore"/>
        </menu>
    </item>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_tab_settings"
            android:title="@string/button_settings"/>
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/button_about"/>
    </group>
</menu>
