<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 The Android Open Source Project
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/statistics"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@color/sysWhite" >

	<TableLayout
        android:id="@+id/table_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:background="@color/statistics" >
        <TableRow
            android:layout_margin="@dimen/stats_table_row_margin" >
            <TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/stats_statistics_text" />
            <TextView
				android:paddingLeft="@dimen/stats_table_column_margin"
				android:gravity="right"
                android:text="@string/time_worked_text" />
            <TextView
				android:paddingLeft="@dimen/stats_table_column_margin"
				android:gravity="left"
                android:text="@string/time_overtime_text" />
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/stats_table_row_margin" >
            <TextView
                android:id="@+id/stats_weekly_text"
				android:layout_marginLeft="@dimen/stats_table_margin_left"
				android:gravity="left"
				android:text="@string/stats_weekly_text" />
            <TextView
                android:id="@+id/stats_weekly_worked_val"
				android:paddingLeft="@dimen/stats_table_column_margin"
				android:gravity="right"
                android:text="-001:00" />
            <TextView
                android:id="@+id/stats_weekly_overtime_val"
				android:paddingLeft="@dimen/stats_table_column_margin"
				android:gravity="left"
                android:text="-002:00" />
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/stats_table_row_margin" >
            <TextView
                android:id="@+id/stats_monthly_text"
				android:layout_marginLeft="@dimen/stats_table_margin_left"
				android:gravity="left"
				android:text="@string/stats_monthly_text" />
            <TextView
                android:id="@+id/stats_monthly_worked_val"
				android:paddingLeft="@dimen/stats_table_column_margin"
				android:gravity="right"
                android:text="-003:00" />
            <TextView
                android:id="@+id/stats_monthly_overtime_val"
				android:paddingLeft="@dimen/stats_table_column_margin"
				android:gravity="left"
                android:text="-004:00" />
        </TableRow>
    </TableLayout>

	<TableLayout
        android:id="@+id/table_week_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginTop="2dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:background="@color/statistics"
		android:gravity="center" >
        <TableRow
            android:layout_margin="@dimen/week_table_row_margin"
			android:gravity="center" >
            <TextView
                android:layout_width="@dimen/week_table_column_width"
            	android:layout_margin="@dimen/week_label_margin"
				android:gravity="center"
				android:background="@drawable/frame_drawable"
                android:text="@string/week_table_mo_text" />
            <TextView
                android:layout_width="@dimen/week_table_column_width"
            	android:layout_margin="@dimen/week_label_margin"
				android:gravity="center"
				android:background="@drawable/frame_drawable"
				android:text="@string/week_table_tu_text" />
            <TextView
                android:layout_width="@dimen/week_table_column_width"
            	android:layout_margin="@dimen/week_label_margin"
				android:gravity="center"
				android:background="@drawable/frame_drawable"
				android:text="@string/week_table_we_text" />
            <TextView
                android:layout_width="@dimen/week_table_column_width"
            	android:layout_margin="@dimen/week_label_margin"
				android:gravity="center"
				android:background="@drawable/frame_drawable"
				android:text="@string/week_table_th_text" />
            <TextView
                android:layout_width="@dimen/week_table_column_width"
            	android:layout_margin="@dimen/week_label_margin"
				android:gravity="center"
				android:background="@drawable/frame_drawable"
				android:text="@string/week_table_fr_text" />
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/week_table_row_margin"
			android:gravity="center" >
            <TextView
                android:id="@+id/week_table_mo_val"
				android:gravity="center"
        		android:textSize="@dimen/text_size_small"
				android:text="-00:01" />
            <TextView
				android:id="@+id/week_table_tu_val"
				android:gravity="center"
        		android:textSize="@dimen/text_size_small"
				android:text="-00:02" />
            <TextView
				android:id="@+id/week_table_we_val"
				android:gravity="center"
        		android:textSize="@dimen/text_size_small"
				android:text="-00:03" />
            <TextView
				android:id="@+id/week_table_th_val"
				android:gravity="center"
        		android:textSize="@dimen/text_size_small"
				android:text="-00:04" />
            <TextView
				android:id="@+id/week_table_fr_val"
				android:gravity="center"
        		android:textSize="@dimen/text_size_small"
				android:text="-00:05" />
        </TableRow>
    </TableLayout>
</LinearLayout>
