<?xml version="1.0" encoding="utf-8"?>
<!--
  MIT License
  Copyright (c) 2014-2025 Holger Mueller
-->

    <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/times_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_margin="@dimen/times_table_row_margin" >
            <TextView
				android:layout_marginStart="@dimen/times_table_margin_left"
				android:layout_marginEnd="@dimen/times_table_column_margin"
				android:gravity="end"
        		android:textSize="@dimen/times_text_size"
        		android:text="@string/date_text" />

			<TextView
				android:id="@+id/date_val"
				android:background="@color/sysLtGray"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="01.01.1970"
				android:textSize="@dimen/times_text_size"
				tools:ignore="TouchTargetSizeCheck" />
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/times_table_row_margin" >
            <TextView
				android:layout_marginStart="@dimen/times_table_margin_left"
				android:layout_marginEnd="@dimen/times_table_column_margin"
				android:gravity="end"
        		android:textSize="@dimen/times_text_size"
        		android:text="@string/start_text" />

			<TextView
				android:id="@+id/start_val"
				android:background="@color/sysLtGray"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="01:00"
				android:textSize="@dimen/times_text_size"
				tools:ignore="TouchTargetSizeCheck" />
        </TableRow>
        <TableRow
            android:layout_margin="@dimen/times_table_row_margin" >
            <TextView
				android:layout_marginStart="@dimen/times_table_margin_left"
				android:layout_marginEnd="@dimen/times_table_column_margin"
				android:gravity="end"
        		android:textSize="@dimen/times_text_size"
        		android:text="@string/end_text" />

			<TextView
				android:id="@+id/end_val"
				android:background="@color/sysLtGray"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="02:00"
				android:textSize="@dimen/times_text_size"
				tools:ignore="TouchTargetSizeCheck" />
        </TableRow>
		<TableRow
			android:layout_margin="@dimen/times_table_row_margin" >
			<TextView
				android:layout_marginStart="@dimen/times_table_margin_left"
				android:layout_marginEnd="@dimen/times_table_column_margin"
				android:gravity="end"
				android:textSize="@dimen/times_text_size"
				android:text="@null" />

			<CheckBox
				android:id="@+id/homeoffice_cb"
				android:background="@color/sysLtGray"
				android:paddingStart="0dp"
				android:paddingEnd="@dimen/times_table_margin_left"
				android:text="@string/homeoffice_text"
				tools:ignore="VisualLintBounds,TouchTargetSizeCheck" />
		</TableRow>
</TableLayout>
